--- a/public/css/admin/style.css
+++ b/public/css/admin/style.css
@@ -1,3 +1,21 @@
+.img-btn {
+  width: 200px;
+  background: #e7c3c3;
+  text-align: center;
+  padding: 5px
+}
+
+.input-phone {
+  appearance: none;
+  background-color: transparent;
+  border: 0.1rem solid #d1d1d1;
+  border-radius: 0.4rem;
+  box-shadow: none;
+  box-sizing: inherit;
+  height: 3.8rem;
+  padding: 0.6rem 1rem;
+}
+
 .cr-posts {
   margin-top: 0px;
   float: right;
@@ -1010,5 +1028,4 @@ select:focus {
   .user-section .username {
     display: none;
   }
-
 }
