--- a/public/css/ui/profile.css
+++ b/public/css/ui/profile.css
@@ -33,3 +33,14 @@
     border-radius: 5px;
     box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
 }
+
+.profile-input  {
+    text-align: center;
+    height: 60px;
+    border: none;
+    background: transparent;
+    font-size: 20px;
+    font-weight: 200;
+    width: 300px;
+    margin-bottom: 10px;
+}
