--- a/public/css/ui/style.css
+++ b/public/css/ui/style.css
@@ -13,6 +13,107 @@ h1 {
   font-size: 60px;
 }
 
+.cmt-btn {
+  padding: 5px 15px;
+  background-color: #183153;
+  border: none;
+  border-radius: 5px;
+  color: #FFF;
+  cursor: pointer;
+}
+
+.popup .overlay {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 1;
+  display: none;
+}
+
+.popup .content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  background: #fff;
+  width: 450px;
+  height: 220px;
+  z-index: 2;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.popup textarea{
+  border: 1px solid #ddd;
+}
+.popup .close-btn {
+  cursor: pointer;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  width: 30px;
+  height: 30px;
+  background: #222;
+  color: #fff;
+  font-size: 25px;
+  font-weight: 600;
+  line-height: 30px;
+  text-align: center;
+  border-radius: 50%;
+}
+
+.popup.active .overlay {
+  display: block;
+}
+
+.popup.active .content {
+  transition: all 300ms ease-in-out;
+  transform: translate(-50%, -50%) scale(1);
+  height: 50vh;
+  overflow-y: scroll;
+  padding-top: 60px;
+}
+
+.comment img {
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+}
+
+.comment .name {
+  position: absolute;
+  left: 20%;
+  font-size: 15px;
+  padding-top: 8px;
+}
+
+.comment .message-box {
+  background-color: #D7DBDD;
+  width: 95%;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 12px;
+}
+
+.like{
+  cursor: pointer;
+  font-size: 30px;
+  text-align: center !important;
+}
+
+.comment {
+  color: #000;
+  font-size: 30px;
+  padding-left: 5%;
+}
+
+.disable{
+  color: red;
+}
+
 .inner-container {
   width: 1110px;
   max-width: 100%;
@@ -171,11 +272,10 @@ ul.menu li a {
 }
 
 footer {
-  color: #ffffff;
   color: #00000080;
   text-align: center;
   font-size: 30px;
-  padding-bottom: 50px;
+  padding-bottom: 25px;
 }
 
 .blog-sec {
@@ -205,9 +305,9 @@ footer {
 }
 
 .article-div {
-  padding-top: 20px;
+  padding-top: 0px;
   padding-bottom: 20px;
-
+  text-align: center;
 }
 
 .article-div h3 {
