--- a/public/css/style.css
+++ b/public/css/style.css
@@ -107,7 +107,7 @@ ul.menu li a {
   background-color: #E4E9FD;
   background-image: -webkit-linear-gradient(65deg, #A683E3 50%, #E4E9FD 50%);
   height: 100vh;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 
