--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,7 +116,6 @@ ul.menu li a {
   margin: 0 auto;
   border-radius: 1.5em;
   box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
-  text-align: center;
   background-color: #FFFFFF;
 }
 
@@ -136,12 +135,12 @@ ul.menu li a {
   font-size: 14px;
   letter-spacing: 1px;
   background: rgba(136, 126, 126, 0.04);
-  padding: 10px 20px;
+  padding: 10px 10px;
   border-radius: 20px;
   outline: none;
   box-sizing: border-box;
   border: 2px solid rgba(0, 0, 0, 0.02);
-  margin-bottom: 25px;
+  margin-bottom: 18px;
   text-align: left;
   font-family: 'Ubuntu', sans-serif;
 }
@@ -153,7 +152,7 @@ ul.menu li a {
   font-size: 14px;
   letter-spacing: 1px;
   background: rgba(136, 126, 126, 0.04);
-  padding: 10px 20px;
+  padding: 10px 3px;
   border-radius: 20px;
   outline: none;
   box-sizing: border-box;
@@ -174,10 +173,7 @@ ul.menu li a {
   color: #fff;
   background: linear-gradient(to right, #9C27B0, #E040FB);
   border: 0;
-  padding-left: 40px;
-  padding-right: 40px;
-  padding-bottom: 10px;
-  padding-top: 10px;
+  padding: 10px 40px;
   font-family: 'Ubuntu', sans-serif;
   font-size: 13px;
   box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
@@ -198,9 +194,10 @@ ul.menu li a {
 
 #content a {
   text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
-  color: #8C55AA;
+  color: #FFFFFF;
   text-decoration: none
 }
+
 
 #content .alert {
   color: white;
