--- a/public/css/ui/about.css
+++ b/public/css/ui/about.css
@@ -73,6 +73,7 @@ img {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   margin: 8px;
   background: #f7c9c930;
+  padding-top: 65px;
 }
 
 .container {
