--- a/public/css/ui/report.css
+++ b/public/css/ui/report.css
@@ -35,6 +35,7 @@ input[type="text"] {
     font-weight: 200;
     width: 300px;
     margin-bottom: 10px;
+    border-bottom: 2px solid #A683E3;
 }
 
 input[type="submit"] {
