--- a/public/css/admin/style.css
+++ b/public/css/admin/style.css
@@ -1,8 +1,25 @@
+.admin-pwdchange {
+  margin: 0 200px;
+}
+.admin-pwdchange label {
+  width: 150px;
+}
+.back-btn {
+  color: #2c1f1f;
+}
+
+.back-btn:hover {
+  color: #fff;
+}
+.right-blk label {
+  width: 100px;
+}
 .img-btn {
-  width: 200px;
+  width: 100%;
   background: #e7c3c3;
   text-align: center;
-  padding: 5px
+  padding: 5px 5px 9px;
+  border-radius: 30px;
 }
 
 .input-phone {
@@ -193,6 +210,8 @@ textarea {
 
 .profile img {
   border-radius: 50px;
+  object-fit: cover;
+  width: 250px;
 }
 
 .profile .right-blk {
@@ -201,8 +220,9 @@ textarea {
 }
 
 .profile input {
-  padding: 5px;
+  padding: 0 5px;
   border-radius: 5px;
+  margin-top: 10px;
 }
 
 .one {
@@ -710,6 +730,9 @@ select:focus {
   float: left;
   margin-top: 0px;
   border-radius: 10px;
+  object-fit: cover;
+  width: 50px;
+  height: 50px;
 }
 
 .user-section .username {
