--- a/public/css/ui/style.css
+++ b/public/css/ui/style.css
@@ -245,7 +245,7 @@ ul.menu li a {
   padding: 12px 16px;
   text-decoration: none;
   display: block;
-  text-align: left;
+  text-align: center;
 }
 
 .dropdown-content a:hover {
@@ -564,6 +564,7 @@ footer {
   cursor: pointer;
   opacity: 0.8;
   width: 100%;
+  border: 2px solid transparent;
 }
 
 .form-container .cancel {
