--- a/public/css/admin/style.css
+++ b/public/css/admin/style.css
@@ -363,7 +363,7 @@ a.anchor {
 
 .credit {
   text-align: center;
-  color: #FFF;
+  color: #666;
   font-size: 13px;
   font-weight: bold;
   text-transform: uppercase;
