--- a/public/css/ui/report.css
+++ b/public/css/ui/report.css
@@ -38,6 +38,23 @@ input[type="text"] {
     border-bottom: 2px solid #A683E3;
 }
 
+input[type="password"] {
+    text-align: center;
+    height: 60px;
+    border: none;
+    background: transparent;
+    font-size: 20px;
+    font-weight: 200;
+    width: 300px;
+    margin-bottom: 10px;
+    border-bottom: 2px solid #A683E3;
+}
+
+input[type="password"]:focus {
+    outline: none;
+    box-shadow: inset 0 -3px 0 0 #A683E3;
+}
+
 input[type="submit"] {
     background: #A683E3;
     display: inline-block;
