user profile update

--- a/public/css/ui/report.css
+++ b/public/css/ui/report.css
@@ -26,7 +26,7 @@
     box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
 }
 
-input[type="text"] {
+.report-input {
     text-align: center;
     height: 60px;
     border: none;
