--- a/public/css/ui/about.css
+++ b/public/css/ui/about.css
@@ -2,7 +2,6 @@
   padding: 50px;
   text-align: center;
   color: white;
-  /* margin: 100px 0 50px 0; */
 }
 
 .about-ttl {
@@ -11,28 +10,15 @@
   font-weight: 300;
   color: rgb(126, 105, 119);
   text-transform: uppercase;
-  /* position: relative; */
   display: block;
   padding-bottom: 10px;
 }
 
-/* .about-ttl::after {
-    content: "";
-    position: absolute;
-    width: 142px;
-    height: 2px;
-    background: #A683E3;
-    left: 50%;
-    margin-left: -73px;
-    bottom: 0;
-    
-}  */
 .about-txt {
   margin: 0 0 30px 0;
   font-size: 25px;
   font-weight: 300;
   color: rgb(126, 105, 119);
-  /* position: relative; */
   padding-bottom: 20px;
 }
 
@@ -67,6 +53,8 @@
 
 img {
   width: 250px;
+  height: 200px;
+  object-fit: contain;
 }
 
 .card {
@@ -102,7 +90,6 @@ img {
 @media screen and (min-width: 768px) and (max-width:1024px) {
   .sec-aboutus {
     padding: 50px;
-    /* margin: 100px 0 50px 0; */
   }
 
   .about-ttl {
@@ -166,13 +153,11 @@ img {
 @media screen and (max-width:767.9px) {
   .sec-aboutus {
     padding: 100px;
-    /* margin: 50px 0; */
   }
 
   .about-ttl {
     margin: 0 0 30px 0;
     font-size: 35px;
-    /* padding-bottom: 10px; */
   }
 
   .about-ttl::after {
@@ -202,10 +187,13 @@ img {
 
   img {
     width: 180px;
+    height: 150px;
   }
 
   .card {
     margin: 4px;
+    height: 420px;
+    padding-top: 30px;
   }
 
   .container {
