--- a/public/css/admin/style.css
+++ b/public/css/admin/style.css
@@ -75,7 +75,34 @@
   font-family: Spring-Rev;
   font-size: 45px;
 }
+.seeform {
+    padding: 20px 20px;
+    width: 100%;
+}
 
+.seeimg {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 15%;
+}
+.seedes {
+    width: 50%;
+}
+.seebody {
+    width: 90%;
+    margin: 30px 50px;
+}
+.seemain {
+    width:60%;
+    margin-left: auto;
+    margin-right: auto;
+}
+.seemoresec {
+    margin-top: 30px;
+    width:100%;
+    box-shadow: 0px 0px 25px rgb(0 0 0 / 5%);
+}
 .edit {
   padding: 9px 30px;
   border: 0.1rem solid #EBC048;
@@ -84,9 +111,18 @@
   background-color: #008000;
   margin-right: 15px;
   color: #FFF;
-
   float:left;
 }
+.seemore {
+    padding: 9px 30px;
+    border: 0.1rem solid #EBC048;
+    border-radius: 499rem;
+    font-size: 1.15rem;
+    background-color: #9E71CE;
+    margin-right: 15px;
+    color: #FFF;
+    float:left;
+  }
 .swal-button {
   padding:0 12px;
 }
@@ -575,11 +611,12 @@ select:focus {
   background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="14" viewBox="0 0 29 14" width="29"><path fill="#f02563" d="M9.37727 3.625l5.08154 6.93523L19.54036 3.625"/></svg>'); }*/
 
 .navbar {
+  background: #A683E3;
+  border-bottom: 5px solid #3D3E3C;
   position: fixed;
   z-index: 1;
   width: 100%;
-  background: #fff;
-  height: 80px;
+  height: 90px;
   padding: 15px 0;
   box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
 }
