--- a/public/css/ui/password.css
+++ b/public/css/ui/password.css
@@ -1,3 +1,15 @@
 .user-changepwd label {
  width: 200px;
 }
+
+.change-name {
+    text-align: center;
+    height: 60px;
+    border: none;
+    background: transparent;
+    font-size: 20px;
+    font-weight: 200;
+    width: 300px;
+    margin-bottom: 10px;
+    border-bottom: 2px solid #A683E3;
+}
